# conservation-composer

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
examples/: advanced.rs  basic.rs  tutorial.rs
memory/: JOURNAL.md
src/: annealer.rs  chord.rs  compose.rs  eigen.rs  error.rs  graph.rs  laplacian.rs  lib.rs  progression.rs  score.rs  spectral.rs  style.rs
