[package]
name = "conservation-composer"
version = "0.1.0"
edition = "2021"
description = "Algorithmic composition maximizing spectral conservation — jazz ii-V-I as math"
license = "MIT"
repository = "https://github.com/SuperInstance/conservation-composer"
keywords = ["music", "composition", "conservation", "spectral", "jazz"]

[dependencies]
serde = { version = "1", features = ["derive"] }
